Fixing word wrap

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,6 +17,8 @@ page-home {
 	.event-title {
 	    color: #43308e;
 	    font-weight: 900;
+	    white-space: initial;
+    	text-align: center;
 	}
 
 	.event-image {
